imperative-tests/tests/invalid_enums/var_name_longer_one.rs
use imperative_rs::InstructionSet;
#[derive(InstructionSet)]
enum Inst {
    #[ opcode = "0xff_vw_ff" ]
    A{vw:u8},
}

fn main() {}